@@ -1,3 +1,8 @@
+* Generalized the error conditions on parser failure to include a parsing error
+  This is there things get interesting!
+
+---
+
 * Changed the basic Env.get to work over ByteStrings instead of Strings
   * We'll eventually get basic String behavior back again, but we drop it
     for a bit so that we can build faster parsers
